picture and text modification

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Git</h2>
         <ul>
           <li>Git status: checks what branch we are currently on.</li>
-          <li>Git checkout -b branch name: creates a new branch and switches to it</li>
+          <li>Git checkout -b branch/name: creates a new branch and switches to it</li>
           <li>Git process to start a new working branch after navigating to correct directory:</li>
           <ol>
             <li>git checkout main</li>
