--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/b2spirit.jpg" alt="B2 Spirit Stealth Bomber"/>
+      <img src="./assets/bowtie-cat.png" alt="Bowtie-Cat"/>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -76,5 +76,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
