--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
